--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "start": "nodemon ./src/index.ts"
+    "start": "nodemon ./src/index.ts",
+    "serve": "node ./dist/index.js",
+    "build": "tsc"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
